# fsc

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
include/fsc/: external.hpp
include/glad/: glad.h
lib/freetype/: freetype.lib
lib/glfw/: glfw3.lib
src/fsc/: camera.cpp  camera.hpp  complex.cpp  complex.hpp  file.cpp  file.hpp  folder.cpp  folder.hpp  font.cpp  font.hpp  fps.cpp  fps.hpp  line.cpp  line.hpp  main.cpp  object.cpp  object.hpp  pipeline.cpp  pipeline.hpp  plane.cpp  plane.hpp  polygon.cpp  polygon.hpp  shader.cpp  shader.hpp  text.cpp  text.hpp  window.cpp  window.hpp  world.cpp  world.hpp
src/fsc/object/: ascii.cpp  ascii.hpp  character.cpp  character.hpp  complex.cpp  complex.hpp  cursor.cpp  cursor.hpp  file.cpp  file.hpp  folder.cpp  folder.hpp  line.cpp  line.hpp  node.cpp  node.hpp  object.cpp  object.hpp  plane.cpp  plane.hpp  polygon.cpp  polygon.hpp  simple.cpp  simple.hpp  text.cpp  text.hpp
src/fsc/object/base/: ascii.cpp  ascii.hpp  character.cpp  character.hpp  complex.cpp  complex.hpp  line.cpp  line.hpp  object.cpp  object.hpp  polygon.cpp  polygon.hpp  simple.cpp  simple.hpp
src/fsc/object/base/transformer/: model.cpp  model.hpp  rotate.cpp  rotate.hpp  scale.cpp  (+5 more)
src/fsc/object/vertices/: cube.cpp  cube.hpp  data.hpp  font.cpp  font.hpp  pyramid.cpp  pyramid.hpp  square.cpp  square.hpp  triangle.cpp  triangle.hpp
src/fsc/shader/: fragment.glsl  vertex.glsl
src/fsc/vertices/: cube.cpp  cube.hpp  data.hpp  pyramid.cpp  pyramid.hpp  square.cpp  square.hpp  triangle.cpp  triangle.hpp
src/libglad/: glad.c
(+11 files in other folders)
